@@ -5,7 +5,8 @@
 #include "fvdi.h"
 #include "relocate.h"
 
-extern void CDECL set_colour_hook(long paletteIndex, short red, short green, short blue, long tcWord); /* STanda */
+
+extern void CDECL c_set_colour_hook(long paletteIndex, long red, long green, long blue, long tcWord); /* STanda */
 
 #define ECLIPSE 0
 #define NOVA 0		/* 1 - byte swap 16 bit colour value (NOVA etc) */
@@ -37,14 +38,6 @@ long CDECL
 GET1NAME(Virtual *vwk, long colour)
 #endif
 {
-#if 0
-	if ((colour >> 16) < 16)
-		colour = (colour & 0xffff) | (tos_colours[colour >> 16] << 16);
-	if ((short)colour < 16)
-		(short)colour = tos_colours[(short)colour];
-
-	return colour;
-#else
 	short foreground, background;
 
 	if ((colour & 0xff) < 16)
@@ -63,7 +56,6 @@ GET1NAME(Virtual *vwk, long colour)
 		background = colour & 0xff;
 
 	return (background << 16) | foreground;
-#endif
 }
 
 
@@ -75,22 +67,13 @@ void CDECL
 GETNAME(Virtual *vwk, long colour, long *foreground, long *background)
 #endif
 {
-#if 0
-	if ((colour >> 16) < 16)
-		colour = (colour & 0xffff) | (tos_colours[colour >> 16] << 16);
-	if ((short)colour < 16)
-		(short)colour = tos_colours[(short)colour];
-	*foreground = (short)colour;
-	*background = colour >> 16;
-#else
- #ifdef NORMAL_NAME
+#ifdef NORMAL_NAME
 	long colours = c_get_colour(vwk, colour);
- #else
+#else
 	long colours = GET1NAME(vwk, colour);
- #endif
+#endif
 	*foreground = colours & 0xffffL;
 	*background = (colours >> 16) & 0xffffL;
-#endif
 }
 
 
@@ -138,9 +121,8 @@ SETNAME(Virtual *vwk, long start, long entries, unsigned short *requested, Colou
 				break;
 			}
 #endif
-			set_colour_hook(start + i, palette[start + i].vdi.red, palette[start + i].vdi.green,
+			c_set_colour_hook(start + i, palette[start + i].vdi.red, palette[start + i].vdi.green,
 			                palette[start + i].vdi.blue, (long)tc_word ); /* STanda */
-
 			*(PIXEL *)&palette[start + i].real = (PIXEL)tc_word;
 		}
 	} else {
@@ -181,9 +163,8 @@ SETNAME(Virtual *vwk, long start, long entries, unsigned short *requested, Colou
 				break;
 			}
 #endif
-			set_colour_hook(start + i, palette[start + i].vdi.red, palette[start + i].vdi.green,
+			c_set_colour_hook(start + i, palette[start + i].vdi.red, palette[start + i].vdi.green,
 			                palette[start + i].vdi.blue, (long)tc_word ); /* STanda */
-
 			*(PIXEL *)&palette[start + i].real = (PIXEL)tc_word;
 		}
 	}
